--- a/Pek.PearUI/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Pek.PearUI/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,7 +1,7 @@
 ﻿@inherits DG.Web.Framework.MVC.Razor.DGRazorPage<TModel>
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, DG.Web.Framework
-@addTagHelper *, DG.Cube
+@addTagHelper *, Pek.PearUI
 
 @using DG
 @using XCode.Membership;
