更新项目以支持 Pek.PearUI 及相关改进
在 `publish-beta.yml` 和 `publish.yml` 中添加对 `Pek.PearUI` 的支持，更新打包步骤。
在 `NuGet.config` 中添加新的包源 `PekSmart`。
在 `AppVersionController.cs` 中使用可空类型以增强安全性。
更新 `DashBoard.cshtml` 和 `Default.cshtml` 中的组件引用，确保使用 `Pek.PearUI`。
在多个文件中添加文档注释以提高可读性。
更新 `Pek.PearUI.csproj` 中的 `Pek.NCubeUI` 版本号。
在 `README.md` 中更新项目名称并描述功能。
更新 `global.json` 中的 SDK 版本以支持最新功能。

--- a/Pek.PearUI/Areas/Admin/Views/Home/DashBoard.cshtml
+++ b/Pek.PearUI/Areas/Admin/Views/Home/DashBoard.cshtml
@@ -1,6 +1,6 @@
-﻿@using DH.Cube.Areas.Admin.Views.Shared.Components.RightNavbarLanguageSwitch
-@using DH.Cube.Areas.Admin.Views.Shared.Components.RightNavbarUserArea
-@using DH.Cube.Areas.Admin.Views.Shared.Components.SideBarMenu
+﻿@using Pek.PearUI.Areas.Admin.Views.Shared.Components.RightNavbarLanguageSwitch
+@using Pek.PearUI.Areas.Admin.Views.Shared.Components.RightNavbarUserArea
+@using Pek.PearUI.Areas.Admin.Views.Shared.Components.SideBarMenu
 @{
     Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
 
@@ -25,14 +25,13 @@
     .layui-nav-child a {
         cursor: pointer;
     }
-    @if (language.UniqueSeoCode=="en")
+    @if (Language?.UniqueSeoCode == "en")
     {
         <text>
              .pear-tab-menu{
                  width:120px !important;
              }
         </text>
-
     }
 </style>
 <script asp-location="Head">
@@ -81,7 +80,7 @@
     var loginUrl = '@Url.Action("Index", "Login")';
     var memberGetAccessToken = '@Url.Action("GetMemberAccessToken", "Site", new { Area = "" })';
 
-    var sslEnabled = @DHSetting.Current.SslEnabled;
+    var sslEnabled = @(DHSetting.Current.SslEnabled);
     var currentURL = window.location.href;
 
     if (!currentURL.includes("localhost")) {
