--- a/Pek.PearUI/Areas/Admin/Views/Shared/Components/RightNavbarLanguageSwitch/Default.cshtml
+++ b/Pek.PearUI/Areas/Admin/Views/Shared/Components/RightNavbarLanguageSwitch/Default.cshtml
@@ -1,4 +1,4 @@
-﻿@model DH.Cube.Areas.Admin.Views.Shared.Components.RightNavbarLanguageSwitch.RightNavbarLanguageSwitchViewModel
+﻿@model Pek.PearUI.Areas.Admin.Views.Shared.Components.RightNavbarLanguageSwitch.RightNavbarLanguageSwitchViewModel
 @{
 }
 
