--- a/Pek.PearUI/Areas/Admin/Views/Shared/Components/RightNavbarUserArea/Default.cshtml
+++ b/Pek.PearUI/Areas/Admin/Views/Shared/Components/RightNavbarUserArea/Default.cshtml
@@ -1,8 +1,8 @@
 ﻿@using System.Text
 @using System.Security.Cryptography
-@model DH.Cube.Areas.Admin.Views.Shared.Components.RightNavbarUserArea.RightNavbarUserAreaViewModel
+@model Pek.PearUI.Areas.Admin.Views.Shared.Components.RightNavbarUserArea.RightNavbarUserAreaViewModel
 @{
-    var adminarea = YRY.Web.Controllers.Areas.Admin.AdminArea.AreaName;
+    var adminarea = Pek.NCubeUI.Areas.Admin.AdminArea.AreaName;
 
     var calculateNavId = new Func<string, string>((hashTarget) =>
     {
