--- a/Pek.PearUI/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Pek.PearUI/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,20 +1,19 @@
-﻿@inherits DG.Web.Framework.MVC.Razor.DGRazorPage<TModel>
-@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@addTagHelper *, DG.Web.Framework
-@addTagHelper *, Pek.PearUI
+﻿@inherits Pek.NCube.MVC.PekRazorPage<TModel>
 
-@using DG
+@inject IPekHtmlHelper PekHtml
+
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@*we remove the default InputTagHelper to prevent the checkbox duplicating: https://stackoverflow.com/questions/42544961/asp-net-core-custom-input-tag-helper-rendering-duplicate-checkboxes*@
+@removeTagHelper Microsoft.AspNetCore.Mvc.TagHelpers.InputTagHelper, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, Pek.NCubeUI
+
+@using Pek.NCubeUI.UI
 @using XCode.Membership;
-@using DG.Web.Framework;
-@using DG.Web.Framework.Models
-@using DG.Web.Framework.UI
-@using DH.Helpers
-@using DH.Core.Infrastructure
 @using DH.Core
-@using DH.Core.Webs
 @using DH.Entity
-@using DH.MVC
-@using Pek.Webs
-@using DH.Models
 @using DH
 @using DH.Core.Domain.Localization
+@using NewLife.Cube.ViewModels
+@using Pek
+@using Pek.NCube
+@using Pek.Webs
