统一使用 PekHtml 辅助类并更新组件
- 将视图文件中的 `Html` 方法替换为 `PekHtml`，确保一致性。
- 更新多个视图文件的标题处理方式，使用 `PekHtml.AppendTitleParts`。
- 移除 `_AdminLayout.cshtml` 和 `_Layout.cshtml` 中对 `IWorkContext` 的直接注入，改为注入 `IEventPublisher`，增强动态性。
- 更新 `Pek.PearUI.csproj` 中的 `Pek.AspNetCore` 和 `Pek.NCubeUI` 版本。
- 新增多个视图组件，提升代码结构和复用性。
- 在 `PublicWidgetZones.cs` 中定义公共部件区域，优化视图组件管理。
- 新增 `FaviconAndAppIconsModel.cs` 模型，处理网站的 favicon 和应用程序图标。

--- a/Pek.PearUI/Areas/Admin/Views/AppVersion/Index.cshtml
+++ b/Pek.PearUI/Areas/Admin/Views/AppVersion/Index.cshtml
@@ -1,9 +1,9 @@
 ﻿@model DH.Entity.RoleEx
 @{
-    Html.AppendTitleParts(T("App版本").Text);
+    PekHtml.AppendTitleParts(T("App版本").Text);
 
-    Html.AppendCssFileParts(ResourceLocation.Head, "~/libs/pear/css/module/dtree/dtree.css");
-    Html.AppendCssFileParts(ResourceLocation.Head, "~/libs/pear/css/module/dtree/font/dtreefont.css");
+    PekHtml.AppendCssFileParts("~/libs/pear/css/module/dtree/dtree.css");
+    PekHtml.AppendCssFileParts("~/libs/pear/css/module/dtree/font/dtreefont.css");
     var list = ViewBag.Role as IList<Role>;
     var dgPage = (Pek.Webs.HttpContext.Current.Request.RouteValues["controller"] + "_" + Pek.Webs.HttpContext.Current.Request.RouteValues["action"]).ToLower();
 }
