--- a/Pek.PearUI/Areas/Admin/Views/Jobs/Add.cshtml
+++ b/Pek.PearUI/Areas/Admin/Views/Jobs/Add.cshtml
@@ -1,5 +1,5 @@
 @{
-    Html.AppendTitleParts(T("新增定时作业").Text);
+    PekHtml.AppendTitleParts(T("新增定时作业").Text);
 }
 <style asp-location="true">
     .layui-input-block {
