--- a/Pek.PearUI/Areas/Admin/Views/Jobs/Edit.cshtml
+++ b/Pek.PearUI/Areas/Admin/Views/Jobs/Edit.cshtml
@@ -1,6 +1,6 @@
 @model CronJob
 @{
-    Html.AppendTitleParts(T("编辑定时任务").Text);
+    PekHtml.AppendTitleParts(T("编辑定时任务").Text);
 }
 <style asp-location="true">
     .layui-input-block {
