--- a/Pek.PearUI/Areas/Admin/Views/OnlinTime/Index.cshtml
+++ b/Pek.PearUI/Areas/Admin/Views/OnlinTime/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    Html.AppendTitleParts(T("在线时间").Text);
+    PekHtml.AppendTitleParts(T("在线时间").Text);
 
     var Roles = Model.Roles as List<Role>;
 }
