--- a/Pek.PearUI/Areas/Admin/Views/OnlineUser/Index.cshtml
+++ b/Pek.PearUI/Areas/Admin/Views/OnlineUser/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    Html.AppendTitleParts(T("在线用户").Text);
+    PekHtml.AppendTitleParts(T("在线用户").Text);
 }
 <style asp-location="true">
     .layui-table td, .layui-table th {
