--- a/Pek.PearUI/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Pek.PearUI/Areas/Admin/Views/_ViewImports.cshtml
@@ -13,7 +13,14 @@
 @using DH.Entity
 @using DH
 @using DH.Core.Domain.Localization
+@using NewLife.Cube
 @using NewLife.Cube.ViewModels
 @using Pek
+@using Pek.Events
 @using Pek.NCube
+@using Pek.NCubeUI.Events
+@using Pek.NCubeUI.Extensions
+@using Pek.PearUI.Common
+@using Pek.PearUI.Components
 @using Pek.Webs
+@using System.Globalization
