更新头部渲染逻辑和注释
在 `_Admin.Head.cshtml` 中移除不必要的注释，并添加对管理员特定头部的支持。
在 `AdminHead.cshtml` 中添加注释，以确保主题缺少 `Shared/Head.cshtml` 时不会抛出错误。

--- a/Pek.PearUI/Areas/Admin/Views/Shared/_Admin.Head.cshtml
+++ b/Pek.PearUI/Areas/Admin/Views/Shared/_Admin.Head.cshtml
@@ -28,7 +28,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     @PekHtml.GenerateHeadCustom()
     @*这用于使主题能够向头部注入内容*@
-    @await Html.PartialAsync("Head")
+    @await Html.PartialAsync("AdminHead")
 
     @PekHtml.GenerateCssFiles()
 
