添加版权信息并引入新脚本文件
在 `_Admin.Head.cshtml` 文件中，添加了版权信息注释：“Powered by DengHao - https://www.deng-hao.com”。
在 `_AdminLayout.cshtml` 文件中，引入了多个脚本文件，包括 SignalR 和 MsgPack 相关的库，以增强页面的功能性和交互性。

--- a/Pek.PearUI/Areas/Admin/Views/Shared/_Admin.Head.cshtml
+++ b/Pek.PearUI/Areas/Admin/Views/Shared/_Admin.Head.cshtml
@@ -46,6 +46,8 @@
     <script asp-location="Head">
 
     </script>
+
+    <!--Powered by DengHao - https://www.deng-hao.com-->
 </head>
 <body>
     <pek-antiforgery-token />
