更新 DashBoard.cshtml 文件
移除对 PekHtml.AppendTitleParts 方法的调用并注释掉相关代码。添加 jquery.min.js 的引用，同时保留 initSignalr.js 的引用。

--- a/Pek.PearUI/Areas/Admin/Views/Home/DashBoard.cshtml
+++ b/Pek.PearUI/Areas/Admin/Views/Home/DashBoard.cshtml
@@ -17,7 +17,7 @@
 
     var site = SiteInfo.FindDefault();
 
-    PekHtml.AppendTitleParts(T($"{site?.SiteName}").Text);
+    // PekHtml.AppendTitleParts(T($"{site?.SiteName}").Text);
 
     var dgPage = (Pek.Webs.HttpContext.Current.Request.RouteValues["controller"] + "_" + Pek.Webs.HttpContext.Current.Request.RouteValues["action"]).ToLower();
 }
