更新页面布局和主体类设置
在 `_Admin.Head.cshtml` 中，修改了 `<body>` 标签的类属性为 `class="@ViewBag.BodyClass"`，并添加了 `pek-antiforgery-token` 元素，同时保留了原有的注释。

在 `_AdminLayout.cshtml` 中，新增了 `ViewBag.BodyClass = "layui-layout-body pear-admin";` 以设置页面的主体类。

--- a/Pek.PearUI/Areas/Admin/Views/Shared/_Admin.Head.cshtml
+++ b/Pek.PearUI/Areas/Admin/Views/Shared/_Admin.Head.cshtml
@@ -49,7 +49,7 @@
 
     <!--Powered by DengHao - https://www.deng-hao.com-->
 </head>
-<body>
+<body class="@ViewBag.BodyClass">
     <pek-antiforgery-token />
     @RenderBody()
 
