--- a/Pek.PearUI/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/Pek.PearUI/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -2,6 +2,7 @@
     Layout = "_Admin.Head";
 
     // Css
+    PekHtml.AppendCssFileParts("~/libs/pear/css/dg.css");
     PekHtml.AppendCssFileParts("~/libs/pear/css/pear.css");
 
     // Script
@@ -10,6 +11,7 @@
     PekHtml.AppendScriptParts(ResourceLocation.Footer, "~/lib/microsoft/signalr/dist/browser/signalr.js");
     PekHtml.AppendScriptParts(ResourceLocation.Footer, "~/libs/pear/pear.js");
     PekHtml.AppendScriptParts(ResourceLocation.Footer, "~/libs/layui/layui.js");
+    PekHtml.AppendScriptParts(ResourceLocation.Footer, "~/js/jquery.min.js");
 
     ViewBag.BodyClass = "layui-layout-body pear-admin";
 }
