更新错误处理逻辑和字段宽度设置
在 `OnlineUserController.cs` 中，添加了对 `LastError` 属性的处理逻辑，使用条件运算符判断并格式化为字符串。

在 `Index.cshtml` 中，调整了多个字段的宽度设置，包括 `UserID`、`Name`、`SessionID`、`OAuthProvider`、`Times`、`Status`、`OnlineTime`、`LastError`、`CreateTime` 和 `UpdateTime`。

在 `Pek.PearUI.csproj` 中，更新了 `Pek.NCubeUI` 包的版本，从 `4.11.2025.323-beta1320` 升级到 `4.11.2025.323-beta1410`。

--- a/Pek.PearUI/Areas/Admin/Views/OnlineUser/Index.cshtml
+++ b/Pek.PearUI/Areas/Admin/Views/OnlineUser/Index.cshtml
@@ -96,12 +96,11 @@
             }, 'filter', 'print']
             , cellMinWidth: 80
             , cols: [[
-                { field: 'ID', title: '@T("ID")',width:80  }
-                , { field: 'UserID', title: '@T("UId")',width:180  }
-                , { field: 'Name', title: '@T("名称")',width:180  }
-                , { field: 'SessionID', title: '@T("会话")',width:180  }
-                , { field: 'OAuthProvider', title: '@T("登录方")',width:140  }
-                , { field: 'Times', title: '@T("次数")',width:120  }
+                { field: 'UserID', title: '@T("UId")',width:100  }
+                , { field: 'Name', title: '@T("名称")',width:100  }
+                , { field: 'SessionID', title: '@T("会话")',width:100  }
+                , { field: 'OAuthProvider', title: '@T("登录方")',width:100  }
+                , { field: 'Times', title: '@T("次数")',width:100  }
                 , { field: 'Page', title: '@T("页面")',width:100 }
                 , { field: 'Platform', title: '@T("平台")',minWidth:100 }
                 , { field: 'OS', title: '@T("系统")',minWidth:100 }
@@ -109,15 +108,15 @@
                 , { field: 'Brower', title: '@T("浏览器")',minWidth:100 }
                 , { field: 'NetType', title: '@T("网络")',minWidth:100 }
                 , { field: 'DeviceId', title: '@T("设备标识")',minWidth:100 }
-                , { field: 'Status', title: '@T("状态")',minWidth:100 }
-                , { field: 'OnlineTime', title: '@T("在线时间(秒)")',minWidth:100 }
-                , { field: 'LastError', title: '@T("最后错误")',minWidth:100 }
+                , { field: 'Status', title: '@T("状态")',minWidth:180 }
+                , { field: 'OnlineTime', title: '@T("在线时间(秒)")',minWidth:140 }
+                , { field: 'LastError', title: '@T("最后错误")',minWidth:180 }
                 , { field: 'Address', title: '@T("地址")',minWidth:100 }
                 , { field: 'TraceId', title: '@T("追踪")',minWidth:100 }
                 , { field: 'CreateIP', title: '@T("创建地址")',minWidth:100 }
-                , { field: 'CreateTime', title: '@T("创建时间")',minWidth:100 }
+                , { field: 'CreateTime', title: '@T("创建时间")',minWidth:180 }
                 , { field: 'UpdateIP', title: '@T("更新地址")',minWidth:100 }
-                , { field: 'UpdateTime', title: '@T("修改时间")',minWidth:100 }
+                , { field: 'UpdateTime', title: '@T("修改时间")',minWidth:180 }
                 // , { fixed: 'right', title: ' @T("操作")', toolbar: '#tool', width: 130 }
             ]]
             , limit: 13
