更新布局路径和依赖项版本
在文件 _AdminLayout.cshtml 中，布局的路径从 "_Admin.Head" 更改为 "~/Areas/Admin/Views/Shared/_Admin.Head.cshtml"。

在文件 Pek.PearUI.csproj 中，Pek.NCubeUI 的版本从 "4.11.2025.323-beta1504" 更新为 "4.11.2025.324-beta0030"。

--- a/Pek.PearUI/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/Pek.PearUI/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    Layout = "_Admin.Head";
+    Layout = "~/Areas/Admin/Views/Shared/_Admin.Head.cshtml";
 
     // Css
     PekHtml.AppendCssFileParts("~/css/dg.css");
