更新布局路径和依赖项版本
在文件 _AdminLayout.cshtml 中，将布局文件的路径从绝对路径更改为相对路径。
在文件 Pek.PearUI.csproj 中，更新 Pek.NCubeUI 的版本。

--- a/Pek.PearUI/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/Pek.PearUI/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    Layout = "~/Areas/Admin/Views/Shared/_Admin.Head.cshtml";
+    Layout = "_Admin.Head";
 
     // Css
     PekHtml.AppendCssFileParts("~/css/dg.css");
