--- a/Pek.PearUI/Areas/Admin/Views/Shared/_Admin.Head.cshtml
+++ b/Pek.PearUI/Areas/Admin/Views/Shared/_Admin.Head.cshtml
@@ -38,6 +38,50 @@
     @await Component.InvokeAsync(typeof(BlogRssHeaderLinkViewComponent))
     @*插入 favicon 和应用程序图标头部代码*@
     @await Component.InvokeAsync(typeof(FaviconViewComponent))
+
+    <script asp-location="Head">
+        var layuiNumber = '@T("个")';
+        var pleaseSelect = '@T("请选择")';
+        var layuiPrint = '@T("打印")';
+        var layuiExport = '@T("导出")';
+        var layuiFilterColumn = '@T("筛选列")';
+        var layuiArticlePage = '@T("条/页")';
+        var layuiTotal = '@T("共")';
+        var layuiBtn = '@T("确定")';
+        var layuiGoPage = '@T("到第")';
+        var layuiPage = '@T("页")';
+        var layuiPrev = '@T("上一页")';
+        var layuiNext = '@T("下一页")';
+        var layuiNoData = '@T("无数据")';
+        var layuiAsc = '@T("升序")';
+        var layuiDesc = '@T("降序")';
+        var layuiCloseCurrent = '@T("关 闭 当 前")';
+        var layuiCloseOther = '@T("关 闭 其 他")';
+        var layuiCloseAll = '@T("关 闭 全 部")';
+        var layuiMenuStyle = '@T("菜单风格")';
+        var layuiTopStyle = '@T("顶部风格")';
+        var layuiThemeColor = '@T("主题配色")';
+        var layuiMoreSettings = '@T("更多设置")';
+        var layuiOpen = '@T("开")';
+        var layuiClose = '@T("关")';
+        var layuiMenu = '@T("菜单")';
+        var layuiView = '@T("视图")';
+        var layuiBanner = '@T("通栏")';
+        var layuiThroughColor = '@T("通色")';
+        var layuiFooter = '@T("页脚")';
+        var layuiSelectAll = '@T("全选")';
+        var layuiClear = '@T("清空")';
+        var layuiReverseSelection = '@T("反选")';
+        var layuiPeeling = '@T("换肤")';
+        var layuiNoDataYet = '@T("暂无数据")';
+        var layuiSearch = '@T("搜索")';
+        var layuiPrevious = '@T("上一页")';
+        var layuiNext = '@T("下一页")';
+        var layuiNotAllowClose = '@T("前页面不允许关闭")';
+        var layuiOpenAtMost = '@T("最多打开")';
+        var layuiTabs = '@T("个标签页")';
+    </script>
+
     @PekHtml.GenerateScripts(ResourceLocation.Head)
     @PekHtml.GenerateInlineCss()
     @PekHtml.GenerateInlineScripts(ResourceLocation.Head)
